explication attr formulaire

--- a/docs/cours/E11.md
+++ b/docs/cours/E11.md
@@ -59,3 +59,48 @@ Pour cela 2 solutions :
 
 pour modifier la page d'erreur, il faut la créer dans le dossier `templates/bundles/TwigBundle/Exception/`
 chaque page d'erreur aura son fichier twig avec le code : `error404.html.twig`, `error500.html.twig` ...
+
+## attr dans un formulaire
+
+Dans une classe de formulaire, il y a une méthode de configuration du formulaire.
+
+On y trouve l'association avec la classe du formulaire (`Review::class`)
+On y trouve aussi `attr`
+c'est un tableau avec en clé le nom de l'attribut HTML et en valeur la valeur de l'attribut
+
+```php
+    public function configureOptions(OptionsResolver $resolver): void
+    {
+        $resolver->setDefaults([
+            'data_class' => Review::class,
+            // ça fait doublon avec la version dans twig
+            // ici c'est plus général
+            // on définit les attributs de la balise <form> 
+            "attr" => ["novalidate" => 'novalidate', "class" => "my-css-class"]
+        ]);
+    }
+```
+
+donne au rendu :
+
+```html
+<form name="review" method="post" novalidate="novalidate" class="my-css-class">
+```
+
+On retouve cette option `attr` sur les éléments du formulaire.
+Même utilisation, un tableau associatif.
+
+```php
+->add('username', TextType::class, [
+    "label" => "Votre pseudo:",
+    "attr" => [
+        "placeholder" => "votre pseudo ..."
+    ]
+])
+```
+
+donne au rendu
+
+```html
+<input type="text" placeholder="votre pseudo ...">
+```
