--- a/docs/cours/E11.md
+++ b/docs/cours/E11.md
@@ -40,7 +40,6 @@ On fera des tests dans ce fichier de navigation pour différencier le front du b
 
 ## CRUD : query_builder
 
-
 ## 404 custom
 
 [doc](https://symfony.com/doc/current/controller/error_pages.html)
@@ -59,6 +58,14 @@ Pour cela 2 solutions :
 
 pour modifier la page d'erreur, il faut la créer dans le dossier `templates/bundles/TwigBundle/Exception/`
 chaque page d'erreur aura son fichier twig avec le code : `error404.html.twig`, `error500.html.twig` ...
+
+dans cette page twig, on a accès à différentes variables :
+
+* status_code : 404, 500, ...
+* status_text : NotFound, Internal Server Error (le texte du code d'erreur)
+* exception : objet contenant les informations de l'exception avec les propriétés :
+  * message : le message que l'on fournit `createNotFoundException("Ce film n'existe pas");`
+  * traceAsString : les lignes et les méthodes qui ont été utilisé pour arriver à l'erreur
 
 ## attr dans un formulaire
 
