--- a/docs/cours/E11.md
+++ b/docs/cours/E11.md
@@ -111,3 +111,12 @@ donne au rendu
 ```html
 <input type="text" placeholder="votre pseudo ...">
 ```
+
+## make:crud Casting
+
+### j'ai oublié de mettre Back\
+
+* je déplace le controlleur
+* je change le namespace du controller
+* je déplace les templates
+* je change tout les appel à la methode render du controller pour donner le nouveau chemin de mes templates
