--- a/docs/erreurs/E11.md
+++ b/docs/erreurs/E11.md
@@ -10,7 +10,7 @@ il manque le composant `validator`
 
 il manque le `use Symfony\Component\Validator\Constraints as Assert;` dans mon entité
 
-## Unable to transform value for property path "movie": Expected a Doctrine\Common\Collections\Collection object.
+## Unable to transform value for property path "movie": Expected a Doctrine\Common\Collections\Collection object
 
 j'essai d'afficher un formulaire d'edition de `Season`
 
@@ -23,3 +23,11 @@ On suppose que le formulaire pour la propriété est marqué avec `multiple => t
 ## Unexpected end of template
 
 il doit manquer un `{% endif %}`
+
+## [Semantical Error] line 0, col 46 near 'name = 'série'': Error: Class App\Entity\Movie has no field or association named type.name
+
+Je fait un query perso, je voudrais faire un filtre sur le nom du type de film
+
+## Error: Allowed memory size of 134217728 bytes exhausted (tried to allocate 1052672 bytes)
+
+erreur de PHP, difficile de dire quel est le soucis, revenir en arrière des dernières modifs pour essayer de trouver l'origine
