permission et dynamisation navbar

--- a/docs/cours/E12.md
+++ b/docs/cours/E12.md
@@ -47,8 +47,8 @@ càd première règle (regex) qui fonctionne, elle s'applique, et les autres son
 
 il existe des rôles spéciaux :
 
-* PUBLIC_ACCESS : aucun controle, pas d'authentification requise
-* IS_AUTHENTICATED_FULLY : il faut être authentifié, mais on ne contrôle pas avec un ROLE
+* `PUBLIC_ACCESS` : aucun controle, pas d'authentification requise
+* `IS_AUTHENTICATED_FULLY` : il faut être authentifié, mais on ne contrôle pas avec un ROLE
 
 exemple :
 
