--- a/docs/commandes/E13.md
+++ b/docs/commandes/E13.md
@@ -1,1 +1,32 @@
 # E13
+# E13
+
+## make:crud User
+
+```bash
+bin/console make:crud
+
+ The class name of the entity to create CRUD (e.g. TinyPizza):
+ > User
+
+ Choose a name for your controller class (e.g. UserController) [UserController]:
+ > Back\User
+
+ Do you want to generate tests for the controller?. [Experimental] (yes/no) [no]:
+ > 
+
+ created: src/Controller/Back/UserController.php
+ created: src/Form/UserType.php
+ created: templates/back/user/_delete_form.html.twig
+ created: templates/back/user/_form.html.twig
+ created: templates/back/user/edit.html.twig
+ created: templates/back/user/index.html.twig
+ created: templates/back/user/new.html.twig
+ created: templates/back/user/show.html.twig
+
+           
+  Success! 
+           
+
+ Next: Check your new CRUD by going to /back/user/
+```
