--- a/docs/commandes/E13.md
+++ b/docs/commandes/E13.md
@@ -1,5 +1,4 @@
 # E13
-# E13
 
 ## make:crud User
 
@@ -29,4 +28,22 @@ bin/console make:crud
            
 
  Next: Check your new CRUD by going to /back/user/
+```
+
+## make:voter
+
+```bash
+bin/console make:voter
+
+ The name of the security voter class (e.g. BlogPostVoter):
+ > Movie1430
+
+ created: src/Security/Voter/Movie1430Voter.php
+
+           
+  Success! 
+           
+
+ Next: Open your voter and add your logic.
+ Find the documentation at https://symfony.com/doc/current/security/voters.html
 ```
