--- a/docs/cours/E13.md
+++ b/docs/cours/E13.md
@@ -23,3 +23,7 @@ On désactive alors la mise à jour automatique depuis le formulaire
     "mapped" => false,
 ```
 
+## les droits : les Voter
+
+[doc design pattern](https://refactoring.guru/fr/design-patterns/chain-of-responsibility)
+
