remove dans service

--- a/docs/cours/E15.md
+++ b/docs/cours/E15.md
@@ -1,1 +1,36 @@
 # E15
+
+## Quels sont les services disponibles ?
+
+```bash
+bin/console debug:autowiring
+
+ Request stack that controls the lifecycle of requests.
+ Symfony\Component\HttpFoundation\RequestStack (request_stack)
+ 
+ Interface for the session.
+ Symfony\Component\HttpFoundation\Session\SessionInterface (.session.do-not-use) - deprecated
+```
+
+## création de service
+
+On crée un service quand on remarque que nous utilisons du code à plusieurs endroit dans nos controllers, et que cela n'est pas le travail d'un controller.
+
+un service n'a pas de structure prédéfinie, car chaque service est unique.
+
+Pour créer un service, il suffit de créer un classe.
+
+On se pose ensuite 2 questions:
+
+* quels sont mes besoins en terme d'autres services
+  * ce seront les services qui seront injectés dans le constructeur
+* Quels sont les fonctionnalités attendus du service
+  * ce seront nos méthodes
+
+Pour utiliser notre service, rien de plus simple, il suffit de demander à symfony de nous le fournir, via l'injection de dépendance.
+
+L'injection de dépendance est utilisable dans:
+
+* nos controllers
+* nos services
+* nos commandes
