--- a/docs/cours/E15.md
+++ b/docs/cours/E15.md
@@ -34,3 +34,76 @@ L'injection de dépendance est utilisable dans:
 * nos controllers
 * nos services
 * nos commandes
+
+## création de commande personnalisée
+
+C'est quoi une commande ?
+
+ce que l'on appele une commande, c'est tout ce que l'on lance dans le terminal avec `bin/console`
+
+exemple:
+
+* les commandes `make` qui vont poser des questions et générer du code
+* les commandes `doctrine` qui vont exécuter du code
+  * `fixtures:load`
+  * `migrations:migrate`
+
+l'intérêt des commandes c'est qu'on les appele depuis le terminal, n'importe quel terminal, du moment que l'on a le fichier `console` de symfony
+
+### exercice : OMDBAPI
+
+le site [omdbapi.com](https://www.omdbapi.com/) met à disposition une api qui permet de faire des recherches d'informations sur des films/séries avec leur nom
+
+Dans O'Flix, on voudrait avoir les affiches des films/séries à la place des images random.
+
+en utilisant cette API on va coder une commande qui va aller mettre à jour notre BDD avec les nouvelles images
+
+### utilisation de l'API
+
+il nous faut une clé API pour l'utiliser.
+Si vous l'utiliser personnellement, créez vous un compte, sinon JB fournit une clé (pas abuser plz)
+On est limité à 1000 appel API par jour, on va donc limiter le nombre de film à 10 dans la BDD
+
+Pour fournir la clé API il suffit de rajouter un paramètre GET dans l'URL
+[exemple](https://www.omdbapi.com/?apikey=a93b767b&t=Altered%20Carbon)
+
+#### creation du compte
+
+fournir un mail
+recevoir mail, dans spam ?
+dans le mail la clé + 2 liens, cliquer sur lien pour activer la clé.
+et ensuite remplacer la clé de JB par la votre dans l'URL `https://www.omdbapi.com/?apikey=XXXXXXXXX&t=Altered%20Carbon`
+
+## make:command
+
+```bash
+bin/console make:command
+```
+
+on nomme notre commande : `radium:oflix:poster-load` (c'est un exemple)
+
+notre commande est déjà active, et la version raccourci `r:o:p` fonctionne sans notre intervention, c'est la console de symfony qui gère ça.
+
+Un argument de commande, c'est une information complémentaire.
+une option c'est une modification de comportemnent de la commande
+
+exemples:
+
+* l'option `--append` pour la commande `doctrine:fixtures:load` change son comportement (il ne purgera pas la BDD)
+* l'argument `TrucController` pour la commande `make:controller` est une information complémentaire
+  * ça ne modifie pas son comportement, ça ajoute l'information du nom du controller automatiquement
+
+### HttpClientInterface
+
+[doc](https://symfony.com/doc/5.4/http_client.html)
+
+```bash
+composer require symfony/http-client
+```
+
+
+
+
+
+
+https://www.omdbapi.com/?apikey=e8ee782&t=lilo
