maintenance avec .env

--- a/docs/cours/E17.md
+++ b/docs/cours/E17.md
@@ -51,7 +51,7 @@ $newHtml = str_replace(
     // Qu'est-ce qu'on cherche ?
     '</nav>',
     // Par quoi on remplace ?
-    '</nav><div class="alert alert-danger m-3">Maintenance prévue mardi 10 janvier à 17h00</div>',
+    '</nav><div class="alert alert-danger m-3">Maintenance prévue jeudi 25 mai à 17h00</div>',
     // Dans quelle chaine ?
     $content
 );
@@ -64,8 +64,83 @@ $response->setContent($newHtml);
 
 [doc](https://symfony.com/doc/5.4/event_dispatcher.html#creating-an-event-subscriber)
 
-## API : GET
+### paramétrage d'un service/subscriber
 
-## API : POST/PUT/PATCH
+#### 1 ère étape : modifier le code pour gérer la conditionnalité
 
-## API : DELETE
+on créer une propriété, que l'on change selon nos besoins
+
+```php
+// private $maintenanceActive = true;
+
+if (!$this->maintenanceActive){
+    // la maintenance est désactivé
+    // on s'arrête là
+    return;
+}
+```
+
+ça fonctionne, mais on doit changer le code pour activer/désactiver la fonctionnalité
+
+#### 2 ème étape : rendre le service/subscriber paramétrable dans le fichier services.yaml
+
+on rend notre service paramétrable en ajoutant un constructeur avec des arguments
+
+```php
+/**
+ * @param bool $argMaintenanceActive paramétrable dans le fichier services.yaml
+ */
+public function __construct($argMaintenanceActive)
+{
+    $this->maintenanceActive = $argMaintenanceActive;
+}
+```
+
+dans le fichier services.yaml, on précise la valeur des arguments
+
+```yaml
+    # Pour paramétrer un service je dois fournir le FQCN du service
+    App\EventSubscriber\MaintenanceSubscriber:
+        # on explique que notre service a des arguments
+        arguments:
+            # on précise alors le nom de l'argument
+            # ainsi que la valeur qu'il va avoir
+            $argMaintenanceActive: true
+```
+
+#### 3 ème étape : le faire depuis le fichier .env
+
+l'objectif est de se servir du fichier `.env` comme ceci:
+
+```ini
+###> MaintenanceSubscriber ###
+MAINTENANCE_ACTIVE=true
+###< MaintenanceSubscriber ###
+```
+
+pour cela on modifie le fichier `services.yaml` en précisant le nom du paramètre à lire dans le fichier `.env`
+
+**ATTENTION** au type de donnée car on lisant le fichier `.env` tout est chaine de caractère.
+Par exemple si on veux un booléen, la chaine 'false' ne sera pas comprise comme la valeur `false`
+
+[doc](https://symfony.com/doc/current/configuration/env_var_processors.html#built-in-environment-variable-processors)
+
+```yaml
+    # Pour paramétrer un service je dois fournir le FQCN du service
+    App\EventSubscriber\MaintenanceSubscriber:
+        # on explique que notre service a des arguments
+        arguments:
+            # on précise alors le nom de l'argument
+            # ainsi que la valeur qu'il va avoir
+            $argMaintenanceActive: '%env(bool:MAINTENANCE_ACTIVE)%'
+```
+
+## API
+
+
+
+### API : GET
+
+### API : POST/PUT/PATCH
+
+### API : DELETE
