Api Genre OK avec serializer

--- a/docs/cours/E17.md
+++ b/docs/cours/E17.md
@@ -137,10 +137,157 @@ Par exemple si on veux un booléen, la chaine 'false' ne sera pas comprise comme
 
 ## API
 
+Happy ?
+Pomme d'API ?
 
+[exemple de séparation](https://www.githubstatus.com/)
+
+[api.gouv.fr](https://api.gouv.fr/rechercher-api)
+
+[public api list](https://github.com/public-apis/public-apis)
+
+[omdbapi](https://www.omdbapi.com/)
+
+[exemple agregation API](https://www.data.gouv.fr/fr/reuses/covid-api-graphql/)
+
+[exemple utilisation API avec Symfony](https://yoandev.co/consommer-une-api-avec-httpclient-et-symfony-5-les-chiffres-du-covid/)
+
+la règle absolu : **API = NO HTML**
 
 ### API : GET
+
+premier exemple : fournir la liste des genres
+
+On créer une nouvelle route : `/api/genres`
+Pour cela il nous faut un controller : `Api\GenreController`
+
+Pour notre controller, on ne veux plus de twig, pas de rendu HTML
+
+```bash
+bin/console make:controller --no-template
+```
+
+On remarque que le retour du controller à changé de `render()` à `json()`
+
+Et c'est tout, on sait faire une API maintenant 🎉
+
+C'est trop simple pour être vrai ...
+
+Si je renvoit le résultat d'un findAll() j'obtiens :
+
+```js
+[
+  {},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{}
+]
+```
+
+le serializer 'de base' ne sait pas aller chercher les propriétés privées
+on a donc des objets vides, mais on a le bon nombre d'objet
+
+On installe donc le [serializer de symfony](https://symfony.com/doc/5.4/components/serializer.html)
+
+```bash
+composer require symfony/serializer
+```
+
+Maintenant la méthode `json()` est capable de lire:
+
+* les propriétés privées
+* les relations
+
+La lecture des relations nous pose problème car toutes nos entités sont liés entre elles.
+On va avoir l'erreur `A circular reference has been detected when serializing`
+
+On va utiliser les groupes de sérialisation pour indiquer les propriétés que l'on veux récupérer via la serialisation
+
+#### @Groups
+
+[doc](https://symfony.com/doc/5.4/components/serializer.html#attributes-groups)
+
+sur nos entités, on va dire quels sont les propriétés que l'on veux serializer
+
+```php
+use Symfony\Component\Serializer\Annotation\Groups;
+/**
+ * @Groups({"group1", "group2"}) // plusieurs groupes sur une ligne
+ * @Groups({"group4"}) // un seul groupe
+ * @Groups("group3") // un seul groupe
+ * @Groups("group5") // un seul groupe
+ * @Groups("group6") // un seul groupe
+ */
+public $anotherProperty;
+```
+
+il faut être rigoureux sur le nommage des groupes, car vu le nombre de méthode API que l'on va developper ...
+
+Ensuite il faut fournir le nom du/des groupes au serializer.
+Pour cela on utilise le paramètre `context` de la méthode `json()`
+
+```php
+return $this->json(
+        // les données
+        $allGenres, 
+        // le code de retour : 200 par défaut
+        200,
+        // les entêtes HTTP, on ne s'en sert pas : []
+        [],
+        // le contexte de serialisation : les groupes
+        [
+            "groups" => 
+            [
+                "genre_browse", "group5"
+            ]
+        ]
+    );
+```
+
+On en profite pour mettre nos groupes sur les relations, et aussi sur les entités liés
+
+```php
+class Genre {
+    /*
+    * @Groups({"genre_browse"})
+    */
+    private $movies;
+}
+class Movie
+{
+    /**
+     * @ORM\Column(type="string", length=255)
+     * 
+     * @Groups({"genre_browse"})
+     */
+    private $title;
+}
+```
+
+**ATTENTION** à ne pas refaire de boucle infinie en mettant l'annotation sur la relation inverse
+
+**ATTENTION** les dev front vont vous demandez toujours plus.
+càd : je veux les genres avec leur films, ainsi que leur types, et le nombre de season
+
+Il faut leur expliquer qu'il ya d'autre routes pour récupérer des infos plus complètes.
+
+ex :
+
+* Genres (all prop) > Movies (id+title)
+* Movies (all prop) > Genres (id+name)
+
+Il faut leur expliquer qu'a chaque "liaison" c'est une requet de plus, et si ils/elles veulent leur données rapidement, il faut que l'on limite le nombre de requetes
 
 ### API : POST/PUT/PATCH
 
 ### API : DELETE
+
+## Annexes
+
+### Extension VSCode ThunderClient
+
+```text
+Nom : Thunder Client
+ID : rangav.vscode-thunder-client
+Description : Lightweight Rest API Client for VS Code
+Version : 2.7.0
+Serveur de publication : Ranga Vadhineni
+Lien de la Place de marché pour VS : https://marketplace.visualstudio.com/items?itemName=rangav.vscode-thunder-client
+```
