--- a/docs/erreurs/E17.md
+++ b/docs/erreurs/E17.md
@@ -1,1 +1,15 @@
 # E17
+
+## A circular reference has been detected when serializing the object of class "App\Entity\Movie" (configured limit: 1)
+
+Je renvois depuis mon API une liste d'entité `Genres`
+Je viens tout juste d'installer le serializer de symfony
+
+L'erreur me dit qu'il y a une référence circulaire (un boucle infinie)
+
+Cette boucle infinie, d'après l'erreur, est sur l'objet `Movie`
+
+En regardant nos entités, on comprend qu'il est en train de 'boucler' sur les relations, et qu'il tourne en rond.
+
+Il faut lui dire où s'arreter : on utilise les annotations `@Groups`
+
