--- a/docs/cours/E17.md
+++ b/docs/cours/E17.md
@@ -275,6 +275,30 @@ ex :
 
 Il faut leur expliquer qu'a chaque "liaison" c'est une requet de plus, et si ils/elles veulent leur données rapidement, il faut que l'on limite le nombre de requetes
 
+### Le dev Front
+
+quand le dev front appelle une de nos route (endpoint) il reçoit du JSON.
+avec ce JSON, il va faire `json.Parse()` si il le fait manuellement (comme en S07 avec `fetch`), si il utilise un package pour les requetes API (`Axios`) se sera fait automatiquement pour lui.
+
+Dans tout les cas il manipule un objet.
+
+Il faut communiquer avec le dev front pour qu'il sache la structure des objets que vous allez lui envoyer.
+Il faut lui fournir un exemple de JSON.
+Ensuite il a aussi des outils pour simuler une API qui vont lui envoyer du JSON.
+
+Je vous propose de faire :
+
+* faire votre MCD (dev back)
+* faire les wireframes (dev front)
+* écrire les besoins de donnée pour les wireframes
+  * faire des JSON d'exemple
+  * ex : `/api/movies/<ID>` => `{"id":1234, "title":"le zoli titre"}`
+  * le nom des propriétés n'est pas hyper important
+
+Qunad le dev back a fini un endpoint, on peut aller dire au front de changer son endpoint `/test/api/movies/201` => `http://<student.vpn.lan>/api/movies/201`
+
+### REST naming ressources
+
 ### API : POST/PUT/PATCH
 
 ### API : DELETE
