read et browse pour genre person et movie

--- a/docs/erreurs/E17.md
+++ b/docs/erreurs/E17.md
@@ -13,3 +13,8 @@ En regardant nos entités, on comprend qu'il est en train de 'boucler' sur les r
 
 Il faut lui dire où s'arreter : on utilise les annotations `@Groups`
 
+## [Semantical Error] The annotation "@Groups" in property App\Entity\Person::$id was never imported. Did you maybe forget to add a "use" statement for this annotation?
+
+```php
+use Symfony\Component\Serializer\Annotation\Groups;
+```
