creation genre OK

--- a/docs/cours/E18.md
+++ b/docs/cours/E18.md
@@ -38,8 +38,43 @@ POST /api/movies : créer un nouveau film
 
 ## coté code : BREAD vs CRUD
 
+CRUD : Create Read Update Delete
+Ce sont les nommages pour les actions de BDD
+Cela ne correspond pas à notre vision d'API REST
 
+BREAD : Browse Read Edit Add Delete
+Ce sont les nommages pour les méthodes de controller (API)
+Cela correspond mieux à notre vision d'API REST
+Ce n'est pas une obligation, mais JB trouve ça pas mal.
+
+## API : 404
+
+On a pas le droit de faire du HTML, donc pas le droit à lancer des exceptions
+
+Il faut donc renvoyer "manuellement" un code de status 404
+
+```php
+if ($movie === null){
+    // ! on est dans une API donc pas de HTML
+    // throw $this->createNotFoundException();
+    return $this->json(
+        // on pense UX : on fournit un message
+        [
+            "message" => "Ce film n'existe pas"
+        ],
+        // le code de status : 404
+        Response::HTTP_NOT_FOUND
+        // on a pas besoin de preciser les autres arguments
+    );
+}
+```
 
 ## API : POST/PUT/PATCH
+
+### POST : création
+
+
+
+### PUT/PATCH : modification
 
 ## API : DELETE
