--- a/docs/cours/E18.md
+++ b/docs/cours/E18.md
@@ -73,8 +73,81 @@ if ($movie === null){
 
 ### POST : création
 
+la création se fait en 3 étapes :
 
+* on récupère le JSON de notre requete
+* on deserialise pour obtenir un objet
+* on persist et flush cet objet
+
+```php
+$jsonContent = $request->getContent();
+/** @var Genre $newGenre */
+$newGenre = $serializerInterface->deserialize(
+    // les données à transformer/deserialiser
+    $jsonContent,
+    // vers quel type d'objet je veux deserialiser
+    Genre::class,
+    // quel est le format du contenu : json
+    'json'
+);
+
+$genreRepository->add($newGenre, true);
+
+return $this->json(
+    // on fournit l'objet créer
+    $newGenre,
+    // le code 201 pour la création
+    Response::HTTP_CREATED,
+    // toujour pas d'entête
+    [],
+    // on oublie pas le contexte car on serialise un objet
+    [
+        "groups" =>
+        [
+            // j'utilise un groupe déjà existant
+            "genre_read",
+            "movie_browse"
+        ]
+    ]
+);
+```
 
 ### PUT/PATCH : modification
 
+De quoi on a besoin ?
+
+* d'un ID => on le récupère de la route
+* des nouvelles valeurs => on les récupère dans le contenu
+
+la seule différence avec la création c'est le contexte de deserialisation où l'on précise que l'on veux mettre à jour un objet existant
+
+```php
+$jsonContent = $request->getContent();
+$genre = $genreRepository->find($id);
+$serializerInterface->deserialize(
+    // les données
+    $jsonContent,
+    // le type d'objet
+    Genre::class,
+    // le format de donnée
+    'json',
+    // ? https://symfony.com/doc/5.4/components/serializer.html#deserializing-in-an-existing-object
+    // en contexte on précise que l'on veux POPULATE / PEUPLER un objet existant
+    [AbstractNormalizer::OBJECT_TO_POPULATE => $genre]
+);
+```
+
+
+#### PUT vs PATCH
+
+[PUT](https://restfulapi.net/http-methods/#put) : modifier l'existant entièrement
+[PATCH](https://restfulapi.net/http-methods/#patch) : modifier partiellement
+
+il n'y a pas de consensus sur lequel utiliser.
+
+JB propose de mettre les deux pour ne facher personne.
+Mais on peux aussi documenter notre API et n'accepter qu'un des deux.
+
 ## API : DELETE
+
+on a juste besoin d'un ID, que l'on obtie
