DELETE genre OK

--- a/docs/cours/E18.md
+++ b/docs/cours/E18.md
@@ -150,4 +150,9 @@ Mais on peux aussi documenter notre API et n'accepter qu'un des deux.
 
 ## API : DELETE
 
-on a juste besoin d'un ID, que l'on obtie
+on a juste besoin d'un ID, que l'on obtient par la route, et ensuite un `remove()` depuis le repository fera l'affaire.
+
+## API : validation des données
+
+## API : la sécurité
+
