--- a/docs/cours/E18.md
+++ b/docs/cours/E18.md
@@ -71,46 +71,99 @@ if ($movie === null){
 
 ## API : POST/PUT/PATCH
 
-### POST : création
+### POST et deserialize
 
-la création se fait en 3 étapes :
+Quand on est en mode "API", si on permet la création avec la route `POST`, on doit s'attendre à recevoir du JSON.
 
-* on récupère le JSON de notre requete
-* on deserialise pour obtenir un objet
-* on persist et flush cet objet
+Simple en PHP, on `deserialize` le json que l'on reçoit et 💥 on a un objet PHP.
+
+On injecte la requète HTTP dans notre fonction pour en récupérer le contenu
 
 ```php
-$jsonContent = $request->getContent();
-/** @var Genre $newGenre */
-$newGenre = $serializerInterface->deserialize(
-    // les données à transformer/deserialiser
-    $jsonContent,
-    // vers quel type d'objet je veux deserialiser
-    Genre::class,
-    // quel est le format du contenu : json
-    'json'
-);
+use Symfony\Component\HttpFoundation\Request;
 
-$genreRepository->add($newGenre, true);
-
-return $this->json(
-    // on fournit l'objet créer
-    $newGenre,
-    // le code 201 pour la création
-    Response::HTTP_CREATED,
-    // toujour pas d'entête
-    [],
-    // on oublie pas le contexte car on serialise un objet
-    [
-        "groups" =>
-        [
-            // j'utilise un groupe déjà existant
-            "genre_read",
-            "movie_browse"
-        ]
-    ]
-);
+public function createItem(Request $request)
+{
+    // Récupérer le contenu JSON
+    $jsonContent = $request->getContent();
 ```
+
+Comme prévu on `deserialize`, c'est à dire que l'on transforme le JSON en Objet en précisant l'entité que l'on veux.
+
+On n'oublie pas d'injecter le Serializer de Symfony
+
+```php
+use Symfony\Component\Serializer\SerializerInterface;
+
+public function createItem(Request $request, SerializerInterface $serializer)
+{
+    // Récupérer le contenu JSON
+    $jsonContent = $request->getContent();
+    // Désérialiser (convertir) le JSON en entité Doctrine Movie
+    $movie = $serializer->deserialize($jsonContent, Movie::class, 'json');
+```
+
+🎉 trop facile, on donnes ça à Doctrine pour qu'il le mettes en BDD et c'est bon 💪
+
+```php
+public function createItem(Request $request, SerializerInterface $serializer, MovieRepository $movieRepository)
+{
+    // Récupérer le contenu JSON
+    $jsonContent = $request->getContent();
+    // Désérialiser (convertir) le JSON en entité Doctrine Movie
+    $movie = $serializer->deserialize($jsonContent, Movie::class, 'json');
+    // On sauvegarde l'entité
+    $movieRepository->add($movie, true);
+```
+
+#### validation des données
+
+😅 `SQLSTATE[xxxx] xxxx cannot be null`
+
+Comment ça MySQL n'est pas content ? 👿
+
+Ben oui, il manque des données, on va demander à Symfony de nous valider tout ça 💪 et surtout de nous dire ce qui coince.
+Comme ça on prévient notre utilisateur en front et on lui décrit les problèmes pour qu'il s'adapte et qu'il nous envoie les bonnes données.
+
+```php
+use Symfony\Component\Validator\Validator\ValidatorInterface;
+
+public function createItem(Request $request, SerializerInterface $serializer, EntityManagerInterface $doctrine, ValidatorInterface $validator)
+{
+    // Récupérer le contenu JSON
+    $jsonContent = $request->getContent();
+    // Désérialiser (convertir) le JSON en entité Doctrine Movie
+    $movie = $serializer->deserialize($jsonContent, Movie::class, 'json');
+    // Valider l'entité
+    // @link : https://symfony.com/doc/current/validation.html#using-the-validator-service
+    $errors = $validator->validate($movie);
+
+    // Y'a-t-il des erreurs ?
+    if (count($errors) > 0) {
+        // TODO Retourner des erreurs de validation propres
+        return $this->json($errors, Response::HTTP_UNPROCESSABLE_ENTITY);
+    }
+    // On sauvegarde l'entité
+    $doctrine->persist($movie);
+    $doctrine->flush();
+```
+
+### Gestion des erreurs de format de json
+
+erreur : `Syntax Error`
+
+si le deserialiseur lance une exception, c'est que le json n'est pas valide.
+On va alors attraper l'erreur et renvoyer un code d'erreur 400 ou 422
+
+```php
+try { // on tente de désérialiser
+    $movie = $serializer->deserialize($jsonContent, Movie::class, 'json');
+} catch (Exception $exception){
+    // Si on n'y arrive pas, on passe ici
+    return $this->json("JSON Invalide", Response::HTTP_BAD_REQUEST);
+}
+```
+
 
 ### PUT/PATCH : modification
 
@@ -136,7 +189,6 @@ $serializerInterface->deserialize(
     [AbstractNormalizer::OBJECT_TO_POPULATE => $genre]
 );
 ```
-
 
 #### PUT vs PATCH
 
