--- a/docs/cours/E18.md
+++ b/docs/cours/E18.md
@@ -164,6 +164,40 @@ try { // on tente de désérialiser
 }
 ```
 
+### DoctrineDenormalizer
+
+Quand on créer un film, on veux l'associer à son type.
+
+Pour cela le front nous fournit dans la propriété "type" un ID
+
+Le serialiser n'arrive pas à rechercher l'entité en BDD.
+On créer donc une classe de dénormalisation pour nous même faire la recherche dans la BDD.
+
+A la condition que l'objet recherché est une entité ET que l'on me fournisse un ID.
+
+ex : Movie -> Type
+
+```js
+{
+    "title" : "Mon Film",
+    "type" : 13
+}
+```
+
+La classe en question : `DoctrineDenormalizer` peut être copié d'un projet à l'autre.
+Et pouf ça marche.
+
+**ATTENTION** cela marche si l'entité lié n'est pas une collection (plusieurs Entité)
+Pour cela il faut que le json mette les ID dans un tableau
+
+```js
+{
+    "title" : "Mon Film",
+    "type" : 13,
+    "genres" : [105, 106]
+}
+```
+
 
 ### PUT/PATCH : modification
 
@@ -208,3 +242,109 @@ on a juste besoin d'un ID, que l'on obtient par la route, et ensuite un `remove(
 
 ## API : la sécurité
 
+### analogie club med
+
+Au club med le serveur du bar de la piscine ne sais pas si vous êtes en all inclusive ou pas.
+Il n'a pas d'outils pour le vérifier.
+
+L'idée du club med est de mettre en palce des bracelet de couleur.
+Les couleurs sont connus du serveur du bar de la piscine, grace à ça il sait à quoi vous avez le droit.
+
+avec les bons termes :
+Pour toute requetes API (bar de la piscine), il va falloir présenter un token (bracelet)
+Grace à se token on va être authentifier.
+
+C'est à l'acceuil, en arrivant, que l'on récupère le bracelet.
+C'est le seul endroit habilité à le fournir.
+POur vous fournir le bracelet il doit vérifier qui vous êtes.
+
+avec les bons termes :
+Nous allons avoir une route qui va fournir le token.
+Pour obtenir le token on va fournir un username/password
+
+On va utiliser [lexikJWT](https://github.com/lexik/LexikJWTAuthenticationBundle) pour ça.
+
+#### installation de Lexik
+
+on suit la [doc](https://github.com/lexik/LexikJWTAuthenticationBundle/blob/2.x/Resources/doc/index.rst#installation)
+
+```bash
+composer require "lexik/jwt-authentication-bundle"
+```
+
+A faire à la première installation : générer les clés SSL
+
+```bash
+bin/console lexik:jwt:generate-keypair
+```
+
+cela créer deux fichiers dans le dossier `config/jwt` qui sont ignoré au niveau git.
+Donc si on clone le projet, il faut regenerer les clés
+Si on déploie en prod, il faut regenerer les clés
+
+la config dans le fichier `.env` est déjà faites en auto
+
+```yaml
+# config/packages/lexik_jwt_authentication.yaml
+lexik_jwt_authentication:
+    secret_key: '%env(resolve:JWT_SECRET_KEY)%' # required for token creation
+    public_key: '%env(resolve:JWT_PUBLIC_KEY)%' # required for token verification
+    pass_phrase: '%env(JWT_PASSPHRASE)%' # required for token creation
+    token_ttl: 64800 # in seconds, default is 3600
+```
+
+```yaml
+#security.yaml
+    firewalls:
+        login:
+            pattern: ^/api/login
+            stateless: true
+            json_login:
+                check_path: /api/login_check
+                success_handler: lexik_jwt_authentication.handler.authentication_success
+                failure_handler: lexik_jwt_authentication.handler.authentication_failure
+
+        api:
+            pattern:   ^/api
+            stateless: true
+            jwt: ~
+
+
+    access_control:
+        - { path: ^/api/login, roles: PUBLIC_ACCESS }
+```
+
+```yaml
+# routes.yaml
+api_login_check:
+    path: /api/login_check
+```
+
+### Dans la vrai vie
+
+Comment on obtiens un token ?
+
+on lance une requete sur la route `/api/login_check`
+Il faut que je fournisse mon identité dans le contenu de ma requete
+
+```js
+{
+    "username" : "admin@admin.com",
+    "password" : "admin"
+}
+```
+
+le username et le mot de passe sont ceux des users que l'on a créer, c'est la même sécurité
+
+cela me renvoit un token
+
+```js
+{
+  "token": "eyJ0eXAiOiJKV1QiLCJhbGciOiJSUzI1NiJ9.eyJpYXQiOjE2ODQ4NDg1NDUsImV4cCI6MTY4NDkxMzM0NSwicm9sZXMiOlsiUk9MRV9BRE1JTiJdLCJ1c2VybmFtZSI6ImFkbWluQGFkbWluLmNvbSJ9.bcE6CLMF9m_ubwnRAbvMc_7WVyN3XomHE6zBS0scHwAjvVwqC00rLntwG8NEk79oXoJltuaLNEEQnzqLTBImOeeg2soDPpnxSSl09bQ1E028g5OBdmApUdqCWian_pl3BHWh_4Z_suBa7xgVxr64_Q80Qcnk9TDMdXQl3Og5Rx3DL0linMsfV9yQ7TTk5EEtbZBD3bP1IOZpFU0CSyMg6F9yynqXlk1Gpb0P_elaQMORAHZ9encVHKOC2NTW8Fx5vI3zjyfGXQQASFlcGHZ4_KAX07g-MCLpwDEhy9EAMBKn1vf2SXvWWGFZ8lc0vh9v5sB1YZMpYwphYn9DdkC89g"
+}
+```
+
+maintenant pour les routes sécurisé il faudra que je fournisse mon token.
+
+Où est ce que je fournit le token ?
+Dans thunderclient, le vais dans la partie `Auth` puis `Bearer` je colle mon token ici.
