--- a/docs/cours/E19.md
+++ b/docs/cours/E19.md
@@ -7,3 +7,87 @@
 ```bash
 composer require --dev symfony/test-pack
 ```
+
+cela nous crée un dossier dans lequel on va mettre nos tests
+cela nous crée un fichier `.env.test` qui sera un fichier `.env` pour les tests
+
+### le fichier .env.test et .env.test.local
+
+Ce fichier est utilisé pour les tests
+Le fichier `.env.local` ne sera plus utilisé.
+Il faudra donc refaire notre paramètrage de d'environement
+
+Ce fichier `.env.test` sera livré, on ne doit donc pas y mettre de login/mdp
+De la même manière que le le fichier `.env.local` on va utilsier le fichier `.env.test.local`
+
+### make:test
+
+```bash
+bin/console make:test
+
+ Which test type would you like?:
+  [TestCase       ] basic PHPUnit tests
+  [KernelTestCase ] basic tests that have access to Symfony services
+  [WebTestCase    ] to run browser-like scenarios, but that don't execute JavaScript code
+  [ApiTestCase    ] to run API-oriented scenarios
+  [PantherTestCase] to run e2e scenarios, using a real-browser or HTTP client and a real web server
+```
+
+Il existe plusieurs type de test, comme on peut le voir.
+Nous utiliserons `KernelTestCase` pour tester nos services indépendement du projet.
+Nous utiliserons `WebTestCase` pour tester notre site web
+
+Pour lancer nos test on tape la commande
+
+```bash
+bin/phpunit
+```
+
+### KernelTestCase
+
+a revoir avec JB car bcp de problèmes
+
+### WebTestCase
+
+l'objectif de ces tests est de tester notre retour html (sans JS)
+
+On commence par créer un client HTTP
+Puis un lance une requete sur une route
+
+```php
+// 1. création client HTTP
+$client = static::createClient();
+// 2. création et exécution requete HTTP
+// GET /
+$crawler = $client->request('GET', '/');
+```
+
+Automatiquement le résultat est disponible pour les assertions
+
+#### Assertions
+
+Un assertion est un test qui compare un résultat attendu au résultat obtenu
+
+Ici on compare le code de status au code 200 (successful)
+
+```php
+// code de retour == 200 ?
+$this->assertResponseIsSuccessful();
+```
+
+ici on teste que le contenu de la balise h1 = Films, séries TV et popcorn en illimité.
+
+```php
+// la page contient une balise h1 avec le texte dedans ?
+$this->assertSelectorTextContains('h1', 'Films, séries TV et popcorn en illimité.')
+```
+
+### code coverage
+
+il est possible de demander à PHPunit de générer un rapport (disponible en plusieur format) qui nous montre le code qui a été testé.
+
+```bash
+bin/phpunit --coverage-html ./code-coverage
+```
+
+cela nous génère un dossier avec des fichiers HTML que l'on pourra voir avec apache
