--- a/docs/erreurs/E19.md
+++ b/docs/erreurs/E19.md
@@ -7,3 +7,40 @@ Soit cela vient du ficheir de services.yaml, soit de ma classe service
 Mais un des deux est mal coder.
 
 Il faut vérifier les deux fichiers et que tout concorde
+
+## "An exception occurred in the driver: SQLSTATE[HY000] [1045] Access denied for user 'app'@'localhost' (using password: YES)"
+
+Je suis en test
+
+l'erreur me dit que je n'accède pas à la BDD
+J'ai du oublier de paramètrer ma BDD
+
+## "An exception occurred in the driver: SQLSTATE[HY000] [1044] Access denied for user 'oflix'@'localhost' to database 'oflix_test'"
+
+Je suis en test
+l'erreur me dit que je n'accède pas à la BDD avec le nom 'oflix_test'
+
+KeskeC que cette BDD ?
+
+cela vient du fichier doctrine.yaml
+
+```yaml
+when@test:
+    doctrine:
+        dbal:
+            # "TEST_TOKEN" is typically set by ParaTest
+            dbname_suffix: '_test%env(default::TEST_TOKEN)%'
+```
+
+Il faut donc créer la BDD de test
+
+```bash
+bin/console doctrine:database:create --env=test
+bin/console doctrine:migrations:migrate --env=test
+bin/console doctrine:fixtures:load --env=test
+```
+
+## SQLSTATE[42000]: Syntax error or access violation: 1044 Access denied for user 'oflix'@'localhost' to database 'oflix_test'
+
+l'utilisatuer oflix n'a pas les droits de création de BDD
+On utilise `explorateur` dans ce cas
