--- a/docs/erreurs/E19.md
+++ b/docs/erreurs/E19.md
@@ -44,3 +44,17 @@ bin/console doctrine:fixtures:load --env=test
 
 l'utilisatuer oflix n'a pas les droits de création de BDD
 On utilise `explorateur` dans ce cas
+
+## Warning:       XDEBUG_MODE=coverage or xdebug.mode=coverage has to be set
+
+J'essaye d'utiliser la commande 
+
+```bash
+bin/phpunit --coverage.html ./code-coverage
+```
+
+il faut utiliser 
+
+```bash
+XDEBUG_MODE=coverage bin/phpunit --coverage-html ./code-coverage
+```
