--- a/docs/commandes/E19.md
+++ b/docs/commandes/E19.md
@@ -124,3 +124,99 @@ Please review, edit and commit them: these files are yours.
 
 No security vulnerability advisories found
 ```
+
+## make:test
+
+```bash
+bin/console make:test
+
+ Which test type would you like?:
+  [TestCase       ] basic PHPUnit tests
+  [KernelTestCase ] basic tests that have access to Symfony services
+  [WebTestCase    ] to run browser-like scenarios, but that don't execute JavaScript code
+  [ApiTestCase    ] to run API-oriented scenarios
+  [PantherTestCase] to run e2e scenarios, using a real-browser or HTTP client and a real web server
+ > KernelTestCase
+
+
+Choose a class name for your test, like:
+ * UtilTest (to create tests/UtilTest.php)
+ * Service\UtilTest (to create tests/Service/UtilTest.php)
+ * \App\Tests\Service\UtilTest (to create tests/Service/UtilTest.php)
+
+ The name of the test class (e.g. BlogPostTest):
+ > Service\Favorites
+
+ created: tests/Service/FavoritesTest.php
+
+           
+  Success! 
+           
+
+ Next: Open your new test class and start customizing it.
+ Find the documentation at https://symfony.com/doc/current/testing/database.html#functional-testing-of-a-doctrine-repository
+```
+
+## kernelTest 2
+
+```bash
+bin/console make:test
+
+ Which test type would you like?:
+  [TestCase       ] basic PHPUnit tests
+  [KernelTestCase ] basic tests that have access to Symfony services
+  [WebTestCase    ] to run browser-like scenarios, but that don't execute JavaScript code
+  [ApiTestCase    ] to run API-oriented scenarios
+  [PantherTestCase] to run e2e scenarios, using a real-browser or HTTP client and a real web server
+ > KernelTestCase
+
+
+Choose a class name for your test, like:
+ * UtilTest (to create tests/UtilTest.php)
+ * Service\UtilTest (to create tests/Service/UtilTest.php)
+ * \App\Tests\Service\UtilTest (to create tests/Service/UtilTest.php)
+
+ The name of the test class (e.g. BlogPostTest):
+ > Service\OmdbApiRomain       
+
+ created: tests/Service/OmdbApiRomainTest.php
+
+           
+  Success! 
+           
+
+ Next: Open your new test class and start customizing it.
+ Find the documentation at https://symfony.com/doc/current/testing/database.html#functional-testing-of-a-doctrine-repository
+```
+
+## webtest
+
+```bash
+bin/console make:test
+
+ Which test type would you like?:
+  [TestCase       ] basic PHPUnit tests
+  [KernelTestCase ] basic tests that have access to Symfony services
+  [WebTestCase    ] to run browser-like scenarios, but that don't execute JavaScript code
+  [ApiTestCase    ] to run API-oriented scenarios
+  [PantherTestCase] to run e2e scenarios, using a real-browser or HTTP client and a real web server
+ > WebTestCase
+
+
+Choose a class name for your test, like:
+ * UtilTest (to create tests/UtilTest.php)
+ * Service\UtilTest (to create tests/Service/UtilTest.php)
+ * \App\Tests\Service\UtilTest (to create tests/Service/UtilTest.php)
+
+ The name of the test class (e.g. BlogPostTest):
+ > Front\Main
+
+ created: tests/Front/MainTest.php
+
+           
+  Success! 
+           
+
+ Next: Open your new test class and start customizing it.
+ Find the documentation at https://symfony.com/doc/current/testing.html#functional-tests
+```
