--- a/docs/erreurs/E19.md
+++ b/docs/erreurs/E19.md
@@ -45,16 +45,18 @@ bin/console doctrine:fixtures:load --env=test
 l'utilisatuer oflix n'a pas les droits de création de BDD
 On utilise `explorateur` dans ce cas
 
-## Warning:       XDEBUG_MODE=coverage or xdebug.mode=coverage has to be set
+## WARNING : XDEBUG_MODE=coverage or xdebug.mode=coverage has to be set
 
-J'essaye d'utiliser la commande 
+phpunit : le codecoverage ne génère pas de dossier ni de fichiers
 
-```bash
-bin/phpunit --coverage.html ./code-coverage
-```
-
-il faut utiliser 
+On précise la variable XDEBUG_MODE en lançant la commande
 
 ```bash
 XDEBUG_MODE=coverage bin/phpunit --coverage-html ./code-coverage
+```
+
+## !!! SI ALLOWED MEMORY ERROR
+
+```bash
+php -d memory_limit=-1 bin/console d:f:l --env=test
 ```
