cours E20 pré déploiement

--- a/docs/cours/E20.md
+++ b/docs/cours/E20.md
@@ -19,3 +19,58 @@ On peut lancer les test avec un filtre pour ne pas relancer l'intégralité des 
 ```bash
 bin/phpunit --filter testAddReviewWithoutSecurity
 ```
+
+L'option `--coverage-html` écrase tout les fichiers.
+Donc il ne génère que le coevrage pour les tests effectués.
+
+### tester la sécurité
+
+l'objectif c'est de tester les accès.
+
+pour tester un accès, il nous faut un utilisateur.
+Sur notre site on saisi un email et un mot de passe.
+
+On a vu comment utiliser un formulaire, on pourrait d'authentifier comme ça.
+
+Mais cela necessite d'avoir le mot de passe de notre utilisateur en clair dans le test ... pas terrible
+
+On peut faire plus simple, en allant chercher en BDD un utilisateur et le fournir à notre client HTTP pour qu'il se loggue automatiquement.
+
+```php
+// Le Repo des Users
+$userRepository = static::getContainer()->get(UserRepository::class);
+// On récupère admin@admin.com
+$testUser = $userRepository->findOneByEmail('admin@admin.com');
+// simulate $testUser being logged in
+$client->loginUser($testUser);
+```
+
+Et si on veux tester toutes les routes ?
+ça va être long de faire du copier/coller....
+
+### @dataProvider
+
+sur les méthodes de tests, on peut passer des arguments.
+Pour que les tests puissent fournir des arguments, on utilise une annotations : `@dataProvider`
+
+Cette annotation attend le nom d'une fonciton qui va fournir tout les arguments.
+
+Dans cette fonciton on utilise un mot clé : `yield` [doc](https://www.php.net/manual/fr/language.generators.syntax.php#control-structures.yield)
+Cela nous permet de renvoyer un lot d'arguments et d'attendre le prochain appel.
+
+```php
+/**
+ * @dataProvider getUrls
+ */
+public function testBack($url, $email, $codeStatus): void
+{ ... }
+
+public function getUrls()
+{
+    yield ['/back/main', 'user@user.com', Response::HTTP_FORBIDDEN];
+    yield ['/back/movie', 'user@user.com', Response::HTTP_FORBIDDEN];
+    yield ['/back/casting/new', 'user@user.com', Response::HTTP_FORBIDDEN];
+    yield ['/back/casting/new', 'manager@manager.com', Response::HTTP_FORBIDDEN];
+    yield ['/back/casting/new', 'admin@admin.com', Response::HTTP_OK];
+}
+```
