--- a/docs/cours/E04.md
+++ b/docs/cours/E04.md
@@ -158,7 +158,7 @@ Si on se pose la question sur une cardinalité mini, même chose, 0 par défaut
 
 ### Modèle Logique de Donnée : MLD
 
-l'objectif de cette étape (ce n'est pas un schéma) et de créer:
+l'objectif de cette étape (ce n'est pas un schéma) est de créer:
 
 * les clés étrangères
 * les tables pivot
